# skywater_seg

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  demo.ipynb  inference.py  pyproject.toml  requirements.txt  run_pipeline.py  train.py
.github/workflows/: build-mac.yml  build-ubuntu.yml  build-windows.yml  ci.yml
assets/photos/: README.md
configs/: ade20k.yaml  ade20k_person.yaml  ade_challenge.yaml  convnext_dinov3.yaml  convnext_dinov3_hires.yaml  custom_classes_example.json  default.yaml  multi_dataset.yaml  segformer_b2.yaml
configs/datasets/: ade20k_full.yaml  ade20k_person.yaml  multi_dataset.yaml
configs/models/: convnext_dinov3.yaml  mobilenetv3_flatdir.yaml  segformer_b2.yaml
data/ade20k/: train.txt  val.txt
demo/: README.md
demo/cxx/: CMakeLists.txt  build.bat  build.sh  main.cpp
demo/cxx/cmake/: FetchCudnn.cmake  FetchOnnxRuntime.cmake
demo/python/: minimal_onnx_demo.py
docs/: auto_annotation.md  datasets.md  deployment.md  evaluation.md  training.md
results/onnx_benchmark/: benchmark_full.json
scripts/: auto_annotate.py  extract_ade20k.py  prepare_ade20k_person.py
skywater_seg/: __init__.py  cli.py  config.py  coreml_export.py  dataset.py  inference.py  losses.py  model.py  trainer.py  utils.py  visualization.py
tests/: conftest.py  test_config.py  test_utils.py  test_visualization.py
