[project]
name = "skywater-seg"
version = "0.2.0"
description = "Sky-water segmentation pipeline: auto-annotation + lightweight model training + deployment"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "SkyWater Team" }
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "onnxruntime>=1.24.3",
    "onnx>=1.22.0",
    "onnx-simplifier>=0.5.0",
    "samexporter>=0.3.0",
    "onnxscript>=0.7.1",
    "clip>=0.2.0",
]

# pip-compatible extras
[project.optional-dependencies]
annotate = [
    "transformers>=4.40.0",
    "segment-anything>=1.0",
    "huggingface_hub>=0.20.0",
]
train = [
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "timm>=0.9.0",
    "tensorboard>=2.13.0",
    "torchmetrics>=1.0.0",
]
deploy = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnx-simplifier>=0.4.0",
    "coremltools>=7.0; sys_platform == 'darwin'",
]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

# uv dependency groups (mirrors optional-dependencies for uv-native usage)
[dependency-groups]
annotate = [
    "transformers>=4.40.0",
    "segment-anything>=1.0",
    "huggingface_hub>=0.20.0",
]
train = [
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "timm>=0.9.0",
    "tensorboard>=2.13.0",
    "torchmetrics>=1.0.0",
]
deploy = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnx-simplifier>=0.4.0",
    "coremltools>=7.0; sys_platform == 'darwin'",
]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
skywater-annotate = "skywater_seg.cli:annotate"
skywater-train = "skywater_seg.cli:train_cmd"
skywater-infer = "skywater_seg.cli:infer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["annotate", "train", "deploy", "dev"]

[tool.ruff]
line-length = 100
