[project]
name = "skywater-seg"
version = "0.2.0"
description = "Sky-water segmentation pipeline: auto-annotation + lightweight model training + deployment"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Vincent Qin" }
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",
    "onnx>=1.22.0",
    "onnxruntime>=1.24.3",
    "onnxruntime-gpu>=1.20.0,<1.21.0",
    "onnx-simplifier>=0.5.0",
    "onnxconverter-common>=1.16.0",
    "omegaconf>=2.3.1",
    "timm>=1.0.28",
]

# pip-compatible extras
[project.optional-dependencies]
annotate = [
    "transformers>=4.40.0",
    "segment-anything>=1.0",
]
train = [
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "tensorboard>=2.13.0",
    "torchmetrics>=1.0.0",
]
deploy = [
    "coremltools>=7.0; sys_platform == 'darwin'",
]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

# uv dependency groups
[dependency-groups]
annotate = [
    "transformers>=4.40.0",
    "segment-anything>=1.0",
]
train = [
    "segmentation-models-pytorch>=0.3.3",
    "albumentations>=1.3.0",
    "tensorboard>=2.13.0",
    "torchmetrics>=1.0.0",
]
deploy = [
    "coremltools>=7.0; sys_platform == 'darwin'",
]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
skywater-annotate = "skywater_seg.cli:annotate"
skywater-train = "skywater_seg.cli:train_cmd"
skywater-infer = "skywater_seg.cli:infer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["annotate", "train", "deploy", "dev"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
